<resources>
    <string name="app_name">Movies</string>
    <string name="movie_title">Movie List Title</string>
    <string name="homescreen_title_text">Movie application</string>
    <string name="trailer">Watch trailer</string>
    <string name="search_hint">Search</string>
    <string name="add_to_personal_list">Add to personal list</string>
    <string name="icon_of_application">Icon of application</string>
    <string name="searched_movies_list_name">Searched movies</string>
    <string name="personal_list_list_name">Personal list</string>
    <string name="all_movies_list_name">All movies</string>
    <!--Strings for the movie list activity-->
    <string name="movie_list_activity_title">Movie lists</string>
    <!--Strings for the create movie activity-->
    <string name="create_list_activity_title">Create new list</string>
    <string name="submit_movie">Create list</string>
    <!--Strings for the settings activity-->
    <string name="settings_activity_title">Settings</string>
    <string name="english">English</string>
    <string name="dutch">Dutch</string>
    <string name="dark_mode_switch_text">Dark mode</string>
    <string name="save_settings">Save settings</string>
    <!--Strings for the movies activity-->
    <string name="movies_activity_title">Movies (</string>
    <!--Strings for the detail movie activity-->
    <string name="delete_out_of_personal_list">Delete out of Personal List</string>
    <string name="give_rating_button_text">Give rating</string>
</resources>