<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="50dp"
    tools:context=".Presentation.SettingsActivity">

    <Switch
        android:id="@+id/languageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/english"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/dark_mode_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:text="@string/dutch"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/languageSwitch"
        app:layout_constraintStart_toEndOf="@+id/languageSwitch"
        app:layout_constraintTop_toTopOf="@+id/languageSwitch" />

    <Switch
        android:id="@+id/dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode_switch_text"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/save_settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_settings_button"
        style="@style/button_style"
        android:onClick="saveSettings"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>