<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_detail_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/movie_detail_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_detail_image"
                app:layout_constraintTop_toTopOf="@+id/movie_detail_image" />

            <TextView
                android:id="@+id/movie_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_image" />

            <TextView
                android:id="@+id/movie_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_rating_star"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/movie_detail_image"
                app:layout_constraintEnd_toEndOf="@+id/movie_detail_duration"
                app:layout_constraintStart_toStartOf="@+id/movie_detail_duration" />

            <Button
                android:id="@+id/trailer_button"
                style="@style/button_style"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:onClick="watchYoutubeVideo"
                android:text="@string/trailer"
                android:textSize="11dp"
                app:layout_constraintEnd_toStartOf="@+id/movie_add_to_personal_list_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_description" />

            <Button
                android:id="@+id/movie_add_to_personal_list_button"
                style="@style/button_style"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:onClick="addToPersonalList"
                android:text="@string/add_to_personal_list"
                android:textSize="11dp"
                app:layout_constraintEnd_toStartOf="@+id/movie_delete_out_of_personal_list_button"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toEndOf="@+id/trailer_button"
                app:layout_constraintTop_toTopOf="@+id/trailer_button" />

            <Button
                android:id="@+id/movie_delete_out_of_personal_list_button"
                style="@style/button_style"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:onClick="deleteOutPersonalList"
                android:text="@string/delete_out_of_personal_list"
                android:textSize="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/movie_add_to_personal_list_button"
                app:layout_constraintTop_toTopOf="@+id/movie_add_to_personal_list_button" />

            <TextView
                android:id="@+id/movie_detail_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/movie_detail_date"
                app:layout_constraintStart_toStartOf="@+id/movie_detail_date"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_date" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:clickable="true"
                android:focusable="true"
                android:isIndicator="false"
                android:numStars="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_button" />

            <Button
                android:id="@+id/give_rating_button"
                style="@style/button_style"
                android:layout_width="150dp"
                android:onClick="giveRating"
                android:text="@string/give_rating_button_text"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_detail_activity_actors_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/give_rating_button">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>